other-cel/ensure-probes-different/ensure-probes-different.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: validate-probes
  annotations:
    pod-policies.kyverno.io/autogen-controllers: none
    policies.kyverno.io/title: Validate Probes in CEL expressions
    policies.kyverno.io/category: Sample in CEL 
    policies.kyverno.io/severity: medium
    policies.kyverno.io/minversion: 1.11.0
    kyverno.io/kubernetes-version: "1.26-1.27"
    policies.kyverno.io/subject: Pod
    policies.kyverno.io/description: >-
      Liveness and readiness probes accomplish different goals, and setting both to the same
      is an anti-pattern and often results in app problems in the future. This policy
      checks that liveness and readiness probes are not equal. Keep in mind that if both the 
      probes are not set, they are considered to be equal and hence fails the check.
spec:
  validationFailureAction: Audit
  background: false
  rules:
    - name: validate-probes
      match:
        any:
        - resources:
            kinds:
            - Deployment
            - DaemonSet
            - StatefulSet
      validate:
        cel:
          expressions:
            - expression: >-
                !object.spec.template.spec.containers.exists(container, 
                has(container.readinessProbe) && has(container.livenessProbe) &&
                container.readinessProbe == container.livenessProbe)
              message: "Liveness and readiness probes cannot be the same."
