other-cel/ensure-probes-different/.kyverno-test/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: validate-probes
policies:
- ../ensure-probes-different.yaml
resources:
- resource.yaml
results:
- kind: Deployment
  policy: validate-probes
  resources:
  - mydeploy-2
  result: fail
  rule: validate-probes
- kind: Deployment
  policy: validate-probes
  resources:
  - mydeploy-1
  result: pass
  rule: validate-probes
